<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/email24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_login"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/input_username"
            app:layout_constraintStart_toStartOf="@+id/input_username"
            app:layout_constraintTop_toBottomOf="@+id/input_username" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/register24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/password24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/input_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_login"
            app:layout_constraintTop_toBottomOf="@+id/input_login" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="Registration"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <EditText
            android:id="@+id/input_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/register24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_surname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/input_name"
            app:layout_constraintStart_toStartOf="@+id/input_name"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/register24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/input_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_name"
            app:layout_constraintTop_toBottomOf="@+id/input_surname" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>